# api.alexis

./: .gitignore  CHANGELOG.md  Makefile  Procfile  README.md  alembic.ini  loadenv  migrate_to_mongo.py  project-240.md  pyproject.toml  release.sh  settings.toml
.github/workflows/: release.yaml
alexis/: __init__.py  app.py  config.py  dependencies.py  logging.py  models.py  sentry.py  server.py  utils.py
alexis/auth/: views.py
alexis/auth/models/: __init__.py  jwt.py  user.py
alexis/chains/: __init__.py  callbacks.py  cherrypicking.py  memory.py  prompts.py  views.py
alexis/chains/prompts/: task.txt
alexis/chat/: callbacks.py  chains.py  gen_name.py  memory.py  models.py  prompts.py  socket.py  views.py
alexis/chat/prompts/: project.txt
alexis/components/: __init__.py  auth.py  cli.py  contexts.py  database.py  redis.py  socketio.py  storage.py
alexis/templates/: elements.html
alexis/tools/: preprocessors.py
migrations/: env.py
migrations/versions/: 3f16f67e18c3_initial_setup.py
